try to add iphonesimulator

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,7 @@ language: objective-c
 script:
 #  - ./brewv xctool 0.1.7
 #  - brew switch xctool 0.1.7
-  - xctool test -workspace Demo/Demo.xcworkspace -scheme DemoTests
-#-sdk iphonesimulator7.0
+  - xctool test -workspace Demo/Demo.xcworkspace -scheme DemoTests -sdk iphonesimulator7.0
 
 #before_install:
 #  - gem install xcpretty
