try to add `pod install`

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,11 @@ language: objective-c
 #xcode_project: MyNewProject.xcodeproj # path to your xcodeproj folder
 #xcode_scheme: AutoNSCodingDemoTests
 
+before_install:
+    - pod install
+
 script:
 #  - ./brewv xctool 0.1.7
 #  - brew switch xctool 0.1.7
-  - xctool test -workspace Demo/Demo.xcworkspace -scheme DemoTests -sdk iphonesimulator7.0
-
-#before_install:
-#  - gem install xcpretty
-#script: make ci | xcpretty -c
+    - xctool test -workspace Demo/Demo.xcworkspace -scheme DemoTests -sdk iphonesimulator7.0
+  
