--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
 script:
     - cd Demo
     - pod install
-    - xctool clean build test -workspace Demo.xcworkspace -scheme DemoTests -sdk iphonesimulator7.1
+    - xctool clean build -workspace Demo.xcworkspace -scheme DemoTests -sdk iphonesimulator7.1
   
