try test travis for kiwi

--- a/Demo/Demo.xcodeproj/xcshareddata/xcschemes/DemoTests.xcscheme
+++ b/Demo/Demo.xcodeproj/xcshareddata/xcschemes/DemoTests.xcscheme
@@ -9,15 +9,15 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "FEE05C7A922E41198E4EE4E0"
-               BuildableName = "libPods-DemoTests.a"
-               BlueprintName = "Pods-DemoTests"
-               ReferencedContainer = "container:Pods/Pods.xcodeproj">
+               BlueprintIdentifier = "47D240B0190917190002EDA5"
+               BuildableName = "DemoTests.xctest"
+               BlueprintName = "DemoTests"
+               ReferencedContainer = "container:Demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
