add brew flexibility

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: objective-c
 
 before_install:
+    - brew update
+    - brew install xctool
     - gem update
     - gem install cocoapods
 
