--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: objective-c
 
 before_install:
     - brew update
+    - brew unlink xctool
     - brew install xctool
     - gem update
     - gem install cocoapods
