--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ before_install:
     - brew update
     - brew unlink xctool
     - brew install xctool
+    - brew link xctool
     - gem update
     - gem install cocoapods
 
